--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@fontsource/poppins": "^5.0.4",
     "@hashup-it/hashup-react-sdk": "^0.1.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
